--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,7 @@ body {
   }
 } */
 @layer reset {
+
   *,
   *::before,
   *::after {
@@ -40,8 +41,13 @@ body {
 
   body {
     margin: unset;
-    background: #0f172a;
+    /* background: #0f172a; */
     color: #fff;
+    background: linear-gradient(-45deg, #0f172a, #101b35, #0f172a);
+    background-size: 400% 400%;
+    animation: gradient 60s ease infinite;
+    height: 100vh;
+    overflow: hidden;
   }
 
   button,
@@ -61,6 +67,7 @@ body {
   }
 
   @media (prefers-reduced-motion: reduce) {
+
     *,
     *::before,
     *::after {
@@ -69,5 +76,76 @@ body {
       transition-duration: 0.01ms !important;
       scroll-behavior: auto !important;
     }
+  }
+}
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.cube {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 8px;
+  height: 8px;
+  border: solid 0.5px #152242; /* Equivalente a darken(#0040C1, 8%) */
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  animation: cube 16s ease-in forwards infinite;
+  z-index: -5;
+}
+
+.cube:nth-child(2n) {
+  border-color: #152242; /* Equivalente a lighten(#0040C1, 10%) */
+}
+
+.cube:nth-child(2) {
+  animation-delay: 2s;
+  left: 25vw;
+  top: 40vh;
+}
+
+.cube:nth-child(3) {
+  animation-delay: 4s;
+  left: 75vw;
+  top: 50vh;
+}
+
+.cube:nth-child(4) {
+  animation-delay: 6s;
+  left: 90vw;
+  top: 10vh;
+}
+
+.cube:nth-child(5) {
+  animation-delay: 8s;
+  left: 10vw;
+  top: 85vh;
+}
+
+.cube:nth-child(6) {
+  animation-delay: 10s;
+  left: 50vw;
+  top: 10vh;
+}
+
+@keyframes cube {
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(10) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
   }
 }
